<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="16sp"
    android:paddingVertical="16sp"
    app:flexDirection="column"
    app:justifyContent="center"
    app:alignItems="center">
    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:flexDirection="column">
        <com.google.android.flexbox.FlexboxLayout
            android:layout_marginTop="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="column"
            app:justifyContent="center"
            app:alignItems="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permissionreadme_cameratitle"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/dosis_bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permissionreadme_cameradescription"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/dosis"/>
        </com.google.android.flexbox.FlexboxLayout>
        <com.google.android.flexbox.FlexboxLayout
            android:layout_marginTop="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="column"
            app:justifyContent="center"
            app:alignItems="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permissionreadme_internet_title"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/dosis_bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permissionreadme_internet_description"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/dosis"/>
        </com.google.android.flexbox.FlexboxLayout>
        <com.google.android.flexbox.FlexboxLayout
            android:layout_marginTop="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="column"
            app:justifyContent="center"
            app:alignItems="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permissionreadme_readfile_title"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/dosis_bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permissionreadme_readfile_description"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/dosis"/>
        </com.google.android.flexbox.FlexboxLayout>
        <com.google.android.flexbox.FlexboxLayout
            android:layout_marginTop="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="column"
            app:justifyContent="center"
            app:alignItems="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permissionreadme_writeimage_title"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/dosis_bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permissionreadme_writefile_description"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/dosis"/>
        </com.google.android.flexbox.FlexboxLayout>
    </com.google.android.flexbox.FlexboxLayout>
    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="64sp"
        android:background="@color/colorPrimary"
        android:text="@string/permissionreadme_exit_button"
        android:fontFamily="@font/dosis_bold"
        android:textSize="20sp"
        android:textColor="@android:color/white" />
</com.google.android.flexbox.FlexboxLayout>
